permission-service/deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: permissionservice
  labels:
    name: permissionservice
    app: permissionservice
